fixing the alignments in home-page and added data to mocker

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,98 +1,103 @@
-.maincontainer{
-    background-color: #f5f5f5;
+.maincontainer {
+	background-color: #f5f5f5;
 }
-.container{
-    color:#62727b;
-    display: flex;
-    column-gap: 100px;
-    justify-content: space-evenly;
-    margin-bottom: 50px;
+.container {
+	color: #62727b;
+	display: flex;
+	column-gap: 100px;
+	justify-content: space-evenly;
+	margin-bottom: 50px;
 }
-.col1{
-    width: 60%;
-    display: flex;
-    justify-content: space-around;
-}
-
-.row1{
-    list-style-type: none;
-}
-.row2{
-    list-style-type: none;
-}
-.row3{
-    list-style-type: none;
+.col1 {
+	width: 60%;
+	display: flex;
+	justify-content: space-around;
 }
 
-.p1{
-    margin-top: 20px;
-    font-size: 16px;
-    margin-bottom: 10px;
+.row1 {
+	list-style-type: none;
 }
-.li1{
-    margin-bottom: 10px;
+.row2 {
+	list-style-type: none;
 }
-
-.col2{
-    margin-right: 100px;
-    font-size: 14px;
-    width: 25%;
-    text-align: center;
+.row3 {
+	list-style-type: none;
 }
 
-.logo{
-    margin-top: 20px;
-    font-size: 35px;
-    margin-bottom: 10px;
+.p1 {
+	margin-top: 20px;
+	font-size: 16px;
+	margin-bottom: 10px;
+}
+.li1 {
+	margin-bottom: 10px;
 }
 
-.p2{
-    color:#000000;
-    font-weight:bold;
-    font-size: 14px;
-    margin-bottom: 10px;
+.col2 {
+	margin-right: 100px;
+	font-size: 14px;
+	width: 25%;
+	text-align: center;
 }
 
-.p3{
-    width:300px;
-    margin-left: 35px;
-    font-size: 14px;
-    margin-bottom: 20px;
-}
-.inputemail{
-    text-align: center;
-    height: 30px;
-    width: 90%;
-    margin-bottom: 10px;
+.logo {
+	margin-top: 20px;
+	font-size: 35px;
+	margin-bottom: 10px;
 }
 
-.inputsubmit{
-    font-size: 12px;
-    margin-top: 20px;
-    background-color: #e51075;;
-    padding:10px 130px;
-    margin-bottom: 100px;
-    font-weight: bold;
-}
-.inputcheck{
-    margin-right: 5px;
+.p2 {
+	color: #000000;
+	font-weight: bold;
+	font-size: 14px;
+	margin-bottom: 10px;
 }
 
-.subcontainer{
-    text-align: center;
-    width: 60%;
-    margin-top: 20px;
-    margin-left: 465px;
-    
+.p3 {
+	width: 300px;
+	margin-left: 35px;
+	font-size: 14px;
+	margin-bottom: 20px;
+}
+.inputemail {
+	text-align: center;
+	height: 30px;
+	width: 90%;
+	margin-bottom: 10px;
 }
 
-.hori{
-    width: 80%;
-    margin: auto;
-    border-bottom: 1px solid #62727b;
+.inputsubmit {
+	font-size: 15px;
+	cursor: pointer;
+	margin-top: 20px;
+	background-color: #e51075;
+	border-radius: 5px;
+	height: 40px;
+	width: 300px;
+	font-family: benton-sans, Helvetica, sans-serif;
+	text-align: center;
+	color: white;
+	border: 1px solid gray;
+	margin-bottom: 100px;
 }
-.spans{
-    color: #62727b;
-    font-size: 14px;
-    margin-left: 20px;
+.inputcheck {
+	margin-right: 5px;
+}
+
+.subcontainer {
+	text-align: center;
+	width: 60%;
+	margin-top: 20px;
+	margin-left: 465px;
+}
+
+.hori {
+	width: 80%;
+	margin: auto;
+	border-bottom: 1px solid #62727b;
+}
+.spans {
+	color: #62727b;
+	font-size: 14px;
+	margin-left: 20px;
 }
